chore: update name in wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 "$schema" = "./node_modules/wrangler/config-schema.json"
 main = ".open-next/worker.js"
-name = "my-app"
+name = "thanhdanhme"
 compatibility_date = "2026-01-30"
 compatibility_flags = [ "nodejs_compat" ]
 
